2007-09-19  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile: removed termios and TERMIOS_OBJS.
	* termios/: Removed.

2007-09-11  Kai Tietz  <kai.tietz@onevision.com>

	* math/cephes_emath.c: (__emdnorm): Work around
	negation of unsigned short bug by using xor logic
	PR/1792793.
	* tlssup.c: (__dyn_tls_init, __dyn_tls_dtor): Type
	cast warnings PR/1792786.
	* misc/gettimeofday.c: (mingw_gettimeofday): New POSIX compatible
	version of gettimeofday method.

2007-08-10  Kai Tietz  <kai.tietz@onevision.com>

	* math/cbrtl.c: [PR/1781604] Warning incompatible implicit declaration.
	* math/erfl.c: [PR/1781602] Warning incompatible implicit declaration.

2007-08-21  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile: Add isblank.c and iswblank.c.
	* isblank.c, iswblank.c: New.

2007-08-21  Professor Brian Ripley  <ripley@stats.ox.ac.uk>

	* dllmain.c: Remove deprecated reference to global
	variable '_pRawDllMain'.

2007-08-14  NightStrike  <nightstrike@gmail.com>

	* Makefile: PR/1772766 remove unused DLLWRAP?.

2007-08-14  Kai Tietz  <kai.tietz@onevision.com>

	* dllcrt.c: Introduce call for DllEntryPoint if present.
	* dllentry.c: New.
	* Makefile: Add dllentry.c to libmingw.a.

2007-07-25  Kai Tietz  <kai.tietz@onevision.com>

	* mingw_helpers.c: New file for libmingw32.a.
	* crtdll.c, crtexe.c: (__dyn_tls_init_callback,
	_decode_pointer, _encode_pointer, mingw_app_type): Moved
	implementation to mingw_helpers.c.

2007-07-25  Kai Tietz  <kai.tietz@onevision.com>

	* crtbegin.c, crtend.c: New.
	* Makfile: generate crtbegin.o and crtend.o objects.
	* CRT_fp10.c: Renamed according to Makefile.
	* CRT_fp8.c: Renamed according to Makefile.

2007-07-19  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile: Add crt0_c.c and crt0_w.c
	* crt0_c.c: New.
	* crt0_w.c: New.
	* crtexe.c: Combine win/console for sake of -mconsole and
	-mwindows and move default main for win into libmingw32.a.

2007-07-19  NightStrike  <nightstrike@gmail.com>
